--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
+.venv/
 __pycache__/
 *.pyc
-venv/
-.DS_Store
-node_modules/
-dist/
-build/
-.env
-.idea/
-.vscode/
-.dockerignore
+*.pyo
+*.pyd
+.Python
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pytest_cache/
+.hypothesis/
+backend-django/venv/
